# Macro_Financial_Simulation

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
src/economics_models/: __init__.py  core.py  visualization.py
tests/: test_core.py
web/: app.js  index.html  styles.css
